--- a/css/styles.css
+++ b/css/styles.css
@@ -7,22 +7,31 @@ h1, h2, h3, h4, h5 {
     color: blue;
 }
 
-/* set these elements to 100% width of page */
-nav, .profile, img, .container, footer {
-    width: 100%;
+/* set images to stay inside divs and space */
+body, img {
+    width: 95%;
     margin: 0 auto;
+} 
+
+.main-nav {
+    font-family: 'Mukta', sans-serif;
+    color: blue;   
 }
 
-nav {
-    font-family: 'Mukta', sans-serif;
-    color: blue;
+.name,
+.nav-bar {
+    display: block;
     text-align: center;
 }
 
 ul {
     list-style-type: none; 
-    padding: 0px; 
-    margin: 0px;
+    padding: 0; 
+    margin: 0;
+}
+
+li {
+    padding: 10px 10px;
 }
 
 .profile {
@@ -36,7 +45,8 @@ ul {
     margin: auto;
 } 
 
-.container {
+.container,
+main {
     font-family: 'Jura', sans-serif;
     color: red;
     text-align: center;
@@ -45,6 +55,7 @@ ul {
 .item {
     padding: 5px 2px;
     border: black solid 2px;
+    align-items: center;
 } 
 
 footer {
@@ -53,25 +64,70 @@ footer {
     padding: 2% 2%;
 }
 
+.footer-bar {
+    display: none;
+}
+
 /* Media Queries */
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .item {
+@media screen and (min-width: 768px) {
+    .main-nav, 
+    .nav-bar,
+    .container {
         display: flex;
-        width: 47%;
-        margin-right: -4px;
-        background-color: aqua;
+    }
+    .main-nav {
+        flex-direction: column;
+        align-items: center;
+    }
 
+    .item {
+        flex: 1 50%;
     }
-    .item:first-child, .item:nth-child(3), .item:nth-child(5) {
-        margin-right: calc(4% - 4px);
-        margin-bottom: 0;
+    
+    .container {
+        flex-wrap: wrap;
     }
+    
     .profile {
         display: inline-block;
-        background-color: yellow;
+        width: 100%;
+        margin-top: 20px;
+        padding: 20px 20px;
     }
+    
     .profile-img {
-        width: 40%;
+        width: 45%;
+        float: right;
+        padding: 10px 10px;
+    } 
+
+    .contact {
+        text-align: center;
+        padding: 100px 100px;
+    }
+    
+    .top {
+        display: none;
+    }
+
+    footer,
+    .footer-bar {
+        display: flex;
+    }
+
+    .footer-bar {
+        align-items: center;
     }
 }
+
+@media screen and (min-width: 1024px) {
+    .main-nav {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .item {
+        flex: 1 33%;
+    }
+} 
